--- a/car_plate 2.0.ipynb
+++ b/car_plate 2.0.ipynb
@@ -193,7 +193,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "td.split('-')[0]"
+   ]
   }
  ],
  "metadata": {
